syntax = "proto3";

package pb;

option go_package = "./";

service ListService {
  rpc CreateList(CreateListRequest) returns (CreateListResponse);
  rpc GetListsByBoard(GetListsByBoardRequest) returns (GetListsByBoardResponse);
}

message CreateListRequest {
  string board_id = 1;
  string title = 2;
}

message CreateListResponse {
  string list_id = 1;
}

message GetListsByBoardRequest {
  string board_id = 1;
}

message GetListsByBoardResponse {
  repeated List lists = 1;
}

message List {
  string list_id = 1;
  string title = 2;
  string board_id = 3;
}
